# Flex_Time

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
agent/: llm_agent.py
app/: engine.py  main.py  models.py
app/static/: app.js  index.html  style.css
scripts/: baseline.py
server/: app.py  engine.py
tests/: conftest.py  test_environment.py
